--- a/style.css
+++ b/style.css
@@ -53,6 +53,14 @@ body {
     transform: scaleX(1);  
     transform-origin: bottom left;
 }
+.shape {
+    width: 150px;       
+    height: 80px;       
+    background-color: #000000;  
+    border: 5px solid #fff;  
+    border-radius: 15px;    
+    margin: 20px;            
+}
 
 .main-title {
     text-align: left;
