--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ body {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #277CE0;  
+    background-color: #000000;  
     transition: transform 0.5s ease; 
     transform: scaleX(0);  
     transform-origin: bottom right; 
