--- a/style.css
+++ b/style.css
@@ -79,18 +79,15 @@ body {
   
 }
 
-.hover-group {
-    background-color: #277CE0; /* Normal hali */
-    color: white;             /* Normal hali */
-    padding: 10px;
-    margin: 5px;
-    text-align: center;
-    transition: all 0.3s ease; /* Animasyonu yumuşatmak için */
-}
+.hover-section {
+    background-color: #230E12; 
+    color: white;             
+    padding: 20px;
+    margin: 10px;
+    transition: all 0.3s ease; 
 
-.hover-group:hover {
-    background-color: #FF5733; /* Hover sırasında arka plan rengi */
-    color: black;              /* Hover sırasında yazı rengi */
-    transform: scale(1.1);     /* Hover sırasında hafif büyütme */
-
+.hover-section:hover {
+    background-color: #FF5733; 
+    color: black;              
+    transform: scale(1.05);    
 }
